test/deca/context/invalid/1_3_method_avant_field3.deca
// Description:
//   definition des methodes avant les fields
//
// Resultats:
//    Ligne 10

class A {
    void rien() {
    }
    int a;
    void rien2()   {
    }
}
